--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -225,7 +225,6 @@ allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
 allow 179.43.133.50;
-allow 179.43.134.19;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -380,7 +379,6 @@ allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
 allow 185.220.101.19;
-allow 185.220.101.191;
 allow 185.220.101.2;
 allow 185.220.101.20;
 allow 185.220.101.21;
@@ -590,9 +588,7 @@ allow 195.47.238.44;
 allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.87;
-allow 195.47.238.90;
 allow 195.47.238.91;
-allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -1226,6 +1222,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1338,7 +1335,6 @@ allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
-allow 2a0b:f4c2:1::191;
 allow 2a0b:f4c2::12;
 allow 2a0b:f4c2::13;
 allow 2a0b:f4c2::14;
@@ -1415,9 +1411,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
@@ -1446,7 +1440,6 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
@@ -1746,6 +1739,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1771,7 +1765,6 @@ allow 5.2.79.190;
 allow 5.34.182.203;
 allow 54.36.101.21;
 allow 54.36.108.162;
-allow 54.39.132.85;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
@@ -1782,7 +1775,6 @@ allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.60.208;
 allow 62.171.137.169;
-allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.106;
 allow 64.190.113.221;
@@ -1806,6 +1798,7 @@ allow 72.235.129.116;
 allow 72.5.43.62;
 allow 74.208.79.7;
 allow 74.82.47.194;
+allow 76.234.124.250;
 allow 77.239.97.46;
 allow 77.48.28.193;
 allow 77.48.28.204;
@@ -1889,7 +1882,6 @@ allow 91.219.236.101;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
-allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
