--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -408,6 +408,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -520,7 +521,6 @@ allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
-allow 2a0b:f4c2:1::191;
 allow 2a0b:f4c2::12;
 allow 2a0b:f4c2::13;
 allow 2a0b:f4c2::14;
@@ -597,9 +597,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:4d00:2:8::2;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
@@ -628,7 +626,6 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
