--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -225,7 +225,6 @@ deny 178.218.144.96;
 deny 178.218.144.99;
 deny 179.43.128.16;
 deny 179.43.133.50;
-deny 179.43.134.19;
 deny 179.43.159.194;
 deny 179.43.159.195;
 deny 179.43.159.196;
@@ -380,7 +379,6 @@ deny 185.220.101.187;
 deny 185.220.101.188;
 deny 185.220.101.189;
 deny 185.220.101.19;
-deny 185.220.101.191;
 deny 185.220.101.2;
 deny 185.220.101.20;
 deny 185.220.101.21;
@@ -590,9 +588,7 @@ deny 195.47.238.44;
 deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.87;
-deny 195.47.238.90;
 deny 195.47.238.91;
-deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -1226,6 +1222,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1338,7 +1335,6 @@ deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
 deny 2a0b:f4c2:1::189;
-deny 2a0b:f4c2:1::191;
 deny 2a0b:f4c2::12;
 deny 2a0b:f4c2::13;
 deny 2a0b:f4c2::14;
@@ -1415,9 +1411,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
-deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
@@ -1446,7 +1440,6 @@ deny 2a0d:bbc7::f816:3eff:fee6:ca14;
 deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
-deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:1d80:17:6f8d::1;
@@ -1746,6 +1739,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1771,7 +1765,6 @@ deny 5.2.79.190;
 deny 5.34.182.203;
 deny 54.36.101.21;
 deny 54.36.108.162;
-deny 54.39.132.85;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
@@ -1782,7 +1775,6 @@ deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.133.60.208;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 62.72.47.105;
 deny 64.190.113.106;
 deny 64.190.113.221;
@@ -1806,6 +1798,7 @@ deny 72.235.129.116;
 deny 72.5.43.62;
 deny 74.208.79.7;
 deny 74.82.47.194;
+deny 76.234.124.250;
 deny 77.239.97.46;
 deny 77.48.28.193;
 deny 77.48.28.204;
@@ -1889,7 +1882,6 @@ deny 91.219.236.101;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
-deny 92.246.84.133;
 deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
