--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -225,7 +225,6 @@ set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.133.50;
-set_real_ip_from 179.43.134.19;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
@@ -380,7 +379,6 @@ set_real_ip_from 185.220.101.187;
 set_real_ip_from 185.220.101.188;
 set_real_ip_from 185.220.101.189;
 set_real_ip_from 185.220.101.19;
-set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.2;
 set_real_ip_from 185.220.101.20;
 set_real_ip_from 185.220.101.21;
@@ -590,9 +588,7 @@ set_real_ip_from 195.47.238.44;
 set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.90;
 set_real_ip_from 195.47.238.91;
-set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
@@ -1226,6 +1222,7 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1338,7 +1335,6 @@ set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
-set_real_ip_from 2a0b:f4c2:1::191;
 set_real_ip_from 2a0b:f4c2::12;
 set_real_ip_from 2a0b:f4c2::13;
 set_real_ip_from 2a0b:f4c2::14;
@@ -1415,9 +1411,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:4d00:2:8::2;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
@@ -1446,7 +1440,6 @@ set_real_ip_from 2a0d:bbc7::f816:3eff:fee6:ca14;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fee9:3e45;
 set_real_ip_from 2a0d:bbc7::f816:3eff:feec:9f18;
 set_real_ip_from 2a0d:bbc7::f816:3eff:fef2:6521;
-set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
@@ -1746,6 +1739,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1771,7 +1765,6 @@ set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
-set_real_ip_from 54.39.132.85;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1782,7 +1775,6 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.60.208;
 set_real_ip_from 62.171.137.169;
-set_real_ip_from 62.182.84.146;
 set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.113.106;
 set_real_ip_from 64.190.113.221;
@@ -1806,6 +1798,7 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
 set_real_ip_from 74.208.79.7;
 set_real_ip_from 74.82.47.194;
+set_real_ip_from 76.234.124.250;
 set_real_ip_from 77.239.97.46;
 set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
@@ -1889,7 +1882,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
-set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
