--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -578,7 +578,6 @@ allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -875,7 +874,6 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -957,7 +955,6 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1440,6 +1437,7 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
@@ -1500,7 +1498,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1527,10 +1524,8 @@ allow 2a12:a800:2:1:185:241:208:185;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:82;
-allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
-allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
@@ -1634,10 +1629,8 @@ allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.70.158;
 allow 45.137.99.182;
-allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
-allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
 allow 45.138.16.239;
@@ -1775,6 +1768,7 @@ allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.133.60.208;
 allow 62.171.137.169;
+allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.106;
 allow 64.190.113.221;
@@ -1882,6 +1876,7 @@ allow 91.219.236.101;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
+allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
@@ -1909,6 +1904,7 @@ allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.143;
 allow 94.74.164.89;
+allow 94.74.182.134;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
