--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -144,7 +144,6 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -626,6 +625,7 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:feec:9f18;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:1d80:17:6f8d::1;
@@ -686,7 +686,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -713,10 +712,8 @@ allow 2a12:a800:2:1:185:241:208:185;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:82;
-allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
-allow 2a12:a800:2:1:45:138:16:222;
 allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
