--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -276,7 +276,7 @@ allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.138.88.25;
-allow 185.141.216.154;
+allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -578,6 +578,7 @@ allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -874,6 +875,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -955,6 +957,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1232,7 +1235,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
-allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1473,7 +1475,6 @@ allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
-allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
 allow 2a0e:bfc7::216:3cff:fe98:45cb;
 allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
@@ -1498,6 +1499,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1705,7 +1707,6 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.156.105;
 allow 45.9.156.161;
-allow 45.9.156.22;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
@@ -1826,7 +1827,6 @@ allow 82.221.131.71;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.145;
-allow 82.96.141.198;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
