--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -276,7 +276,7 @@ deny 185.132.53.107;
 deny 185.132.53.150;
 deny 185.132.53.188;
 deny 185.138.88.25;
-deny 185.141.216.154;
+deny 185.14.31.113;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -578,6 +578,7 @@ deny 194.42.196.42;
 deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.167.14;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
@@ -874,6 +875,7 @@ deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.105.248;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -955,6 +957,7 @@ deny 2602:fb54:1400::1d;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1232,7 +1235,6 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:9b85:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:112:31::1;
-deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
@@ -1473,7 +1475,6 @@ deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
-deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
 deny 2a0e:bfc7::216:3cff:fe98:45cb;
 deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
@@ -1498,6 +1499,7 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
@@ -1705,7 +1707,6 @@ deny 45.9.148.50;
 deny 45.9.156.101;
 deny 45.9.156.105;
 deny 45.9.156.161;
-deny 45.9.156.22;
 deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.104;
@@ -1826,7 +1827,6 @@ deny 82.221.131.71;
 deny 82.221.131.86;
 deny 82.221.139.190;
 deny 82.29.128.145;
-deny 82.96.141.198;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
